<resources>
    <string name="app_name">Nim</string>
    <string name="PlayerString">Player</string>
    <string name="playButtonString">Play</string>
    <string name="optionsButtonString">Options</string>

    <string name="howToPlayButtonString">How to Play</string>
    <string name="creditsButtonString">Credits</string>
    <string name="scoreboardButtonString">Scoreboard</string>

    <string name="okay">OK</string>
    <string name ="directions">To win select the last piece.\nYou can take as many pieces from any row but only one row at a time.</string>
    <string name="PlayAgain">Play Again</string>
    <string name="Exit">Exit to Main Menu</string>
    <string name="ViewScoreBoard">View Scoreboard</string>

    <string name="Winner"> Wins!</string>


    <string name="title_activity_options">Options</string>
    <string name="Oponent">Oponent</string>

    <string name="change_name">Change Player Name</string>
    <string name="edit_message">Enter Name</string>

    <string name="playerOne"> Player One</string>
    <string name="playerTwo">Player Two</string>

    <string name="playWithFriend">Play with Friend</string>

    <string name="friendString">Friend</string>
    <string name="computerString">Computer</string>
    <string name="stringFirst">Select Player One:</string>
    <string name="Preferences">Preferences</string>
    <string name="selectRows">Select Rows:</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="Audio">Audio</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="ComputerMoveSpeed">Computer Move Speed</string>
    <string name="creditsString">Developed by Team 10.\n\nGame board and Operations by Nicholas Schuetze\n Main Graphical User Interfaces by Cam Nguyen \n Artificial Intelligence by Kendall Pruit \nScoreboard by Vincent Bui </string>

    <string-array name="NavigatorBar">
        <item>How to Play</item>
        <item>Audio</item>
        <item>End game</item>
    </string-array>


    <string name="difficultyPrompt">Select Difficulty</string>
    <string-array name="DifficultyArray">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>


    <string name="rowPrompt">Select Rows</string>

    <!--Selections of Rows-->
    <string-array name="rowArray">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="title_activity_credits">Credits</string>


</resources>
