<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000E0E"
    tools:context="com.example.cam.nim.">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringFirst"/>
    <!--Player Selection Radio Group -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPlayer"
            android:text="@string/PlayerString"
            android:padding="10dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioComputer"
            android:padding="10dp"
            android:text="@string/computerString"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Audio"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioEnable"
            android:text="@string/enable"
            android:onClick="onAudioRadio"
            android:padding="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioDisable"
            android:onClick="onAudioRadio"
            android:text="@string/disable"
            android:padding="10dp"/>
    </RadioGroup>
<!-- For Row selection-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/rowPrompt"
        android:id="@+id/spinnerRows">
    </Spinner>
<!-- label for computer speed seekbar -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ComputerMoveSpeed"/>

    <SeekBar
        android:id="@+id/computerSpeedSeekbar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:progressDrawable="@drawable/progess_bar"
        android:minHeight="3dip"
        android:maxHeight="3dip"
        android:max="2"/>
<!--Container for the buttons to be horizontial -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/canelStart"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/okStart"
            android:text="@string/okay"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
