<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/boardColor"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cam.nim.">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:text="@string/Preferences" />

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"></View>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/stringFirst" />
    <!--Player Selection Radio Group -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/PlayerGroup"
        android:checkedButton="@+id/radioPlayer">

        <RadioButton
            android:id="@+id/radioPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/PlayerString"
            android:textColor="#FFFFFF"
            android:onClick="onPlayerRadio"/>

        <RadioButton
            android:id="@+id/radioOponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/friendString"
            android:textColor="#FFFFFF"
            android:onClick="onPlayerRadio"/>
    </RadioGroup>
    <View
        android:layout_width="0dp"
        android:layout_height="5dp"></View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/Audio" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/AudioGroup"
        android:checkedButton="@+id/radioEnable">

        <RadioButton
            android:id="@+id/radioEnable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAudioRadio"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:text="@string/enable" />

        <RadioButton
            android:id="@+id/radioDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAudioRadio"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:buttonTint="#FFFFFF"
            android:text="@string/disable" />
    </RadioGroup>
    <View
        android:layout_width="0dp"
        android:layout_height="5dp"></View>

    <!-- For Row selection-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/rowPrompt"/>
    <View
        android:layout_width="10dp"
        android:layout_height="0dp"></View>
    <Spinner
        android:id="@+id/spinnerRows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:spinnerMode="dropdown">
    </Spinner>

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"></View>

    <Button
        android:id="@+id/NewPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:onClick="ChangePlayerName"
        android:padding="0dp"
        android:text="Change Player Name">

    </Button>

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"></View>
    <!--Container for the buttons to be horizontial -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/okStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="@drawable/button"
            android:text="@string/apply" />
        <View
            android:layout_width="5dp"
            android:layout_height="0dp">
        </View>

        <Button
            android:id="@+id/canelStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:background="@drawable/button"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
