<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dialogs"
    android:id="@+id/credit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditsButtonString"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/creditsString"
        android:textColor="#FFFFFF"/>
    <View
        android:layout_width="0dp"
        android:layout_height="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:text="@string/okay"
        android:id="@+id/okayCredit"/>


</LinearLayout>
