<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editName">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/PlayerNameGroup"
        android:checkedButton="@+id/playerOne">

        <RadioButton
            android:id="@+id/playerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/playerOne" />

        <RadioButton
            android:id="@+id/playerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/playerTwo"/>
    </RadioGroup>

    <EditText
        android:id="@+id/playerEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:background="#FFFFFF"/>


</LinearLayout>