<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/boardColor"
    android:gravity="center">

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:text="@string/Exit"
        android:onClick="onExitButton"/>
    <View
        android:layout_width="0dp"
        android:layout_height="5dp"/>
    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:onClick="onPlayAgain"
        android:text="@string/PlayAgain" />
    <View
        android:layout_width="0dp"
        android:layout_height="5dp"/>
    <Button
        android:id="@+id/viewScoreboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/button"
        android:text="@string/ViewScoreBoard"
        android:onClick="onScoreBoardButton"/>
</LinearLayout>